Add missing imports and fix compatibility in SecurityConfig